refactor: Return Parameters from export operations, remove redundant ownership checks
Export operations ($export, view-export, bulk-submit) now return FHIR
Parameters resources directly. A new ParametersToJsonInterceptor
converts responses to JSON format when clients specify Accept:
application/json.

Removed redundant ownership validation from ImportProvider and
ExportOperationHelper. These checks compared the current user to the
job owner, but since AsyncAspect preserves the same authentication
context, the values were always equal. Ownership validation now occurs
at the correct layer: JobProvider.$job for status polling and
ExportResultProvider.$result for file downloads.

Added JobProviderSecurityTest to verify ownership enforcement at the
$job endpoint.