@@ -33,11 +33,11 @@ import java.util.List;
 import java.util.concurrent.ExecutionException;
 import lombok.extern.slf4j.Slf4j;
 import org.hl7.fhir.instance.model.api.IBaseResource;
-import org.hl7.fhir.r4.model.Binary;
 import org.hl7.fhir.r4.model.Identifier;
 import org.hl7.fhir.r4.model.OperationOutcome;
 import org.hl7.fhir.r4.model.OperationOutcome.IssueSeverity;
 import org.hl7.fhir.r4.model.OperationOutcome.IssueType;
+import org.hl7.fhir.r4.model.Parameters;
 import org.hl7.fhir.r4.model.StringType;
 import org.springframework.stereotype.Component;
 
@@ -54,17 +54,13 @@ public class BulkSubmitStatusProvider {
   private static final int MAX_JOB_WAIT_ATTEMPTS = 10;
   private static final long JOB_WAIT_INTERVAL_MS = 500;
 
-  @Nonnull
-  private final SubmissionRegistry submissionRegistry;
+  @Nonnull private final SubmissionRegistry submissionRegistry;
 
-  @Nonnull
-  private final BulkSubmitResultBuilder resultBuilder;
+  @Nonnull private final BulkSubmitResultBuilder resultBuilder;
 
-  @Nonnull
-  private final BulkSubmitValidator validator;
+  @Nonnull private final BulkSubmitValidator validator;
 
-  @Nullable
-  private final JobRegistry jobRegistry;
+  @Nullable private final JobRegistry jobRegistry;
 
   /**
    * Creates a new BulkSubmitStatusProvider.
@@ -73,14 +69,13 @@ public class BulkSubmitStatusProvider {
    * @param resultBuilder The builder for generating result manifests.
    * @param validator The validator for request validation.
    * @param jobRegistry The job registry for looking up async jobs (may be null if async is
-   * disabled).
+   *     disabled).
    */
   public BulkSubmitStatusProvider(
       @Nonnull final SubmissionRegistry submissionRegistry,
       @Nonnull final BulkSubmitResultBuilder resultBuilder,
       @Nonnull final BulkSubmitValidator validator,
-      @Nullable final JobRegistry jobRegistry
-  ) {
+      @Nullable final JobRegistry jobRegistry) {
     this.submissionRegistry = submissionRegistry;
     this.resultBuilder = resultBuilder;
     this.validator = validator;
@@ -89,10 +84,11 @@ public class BulkSubmitStatusProvider {
 
   /**
    * The $bulk-submit-status operation endpoint.
-   * <p>
-   * This operation returns a 202 Accepted response with a Content-Location header pointing to the
-   * $job endpoint for polling progress. The Job is created by BulkSubmitExecutor when processing
-   * begins. Clients should poll the $job endpoint to track progress and retrieve the final result.
+   *
+   * <p>This operation returns a 202 Accepted response with a Content-Location header pointing to
+   * the $job endpoint for polling progress. The Job is created by BulkSubmitExecutor when
+   * processing begins. Clients should poll the $job endpoint to track progress and retrieve the
+   * final result.
    *
    * @param submissionId The submission ID to check status for.
    * @param submitter The submitter identifier.
@@ -102,30 +98,25 @@ public class BulkSubmitStatusProvider {
   @Operation(name = "$bulk-submit-status")
   @OperationAccess("bulk-submit")
   @Nonnull
-  public Binary bulkSubmitStatusOperation(
+  public Parameters bulkSubmitStatusOperation(
       @OperationParam(name = "submissionId") final StringType submissionId,
       @OperationParam(name = "submitter") final Identifier submitter,
-      @Nonnull final ServletRequestDetails requestDetails
-  ) {
+      @Nonnull final ServletRequestDetails requestDetails) {
     // Validate required headers per spec.
     validator.validateAcceptHeader(requestDetails);
     validator.validatePreferAsyncHeader(requestDetails);
 
     if (submissionId == null || submissionId.isEmpty()) {
       throw new ca.uhn.fhir.rest.server.exceptions.InvalidRequestException(
-          "Missing required parameter: submissionId"
-      );
+          "Missing required parameter: submissionId");
     }
     if (submitter == null || submitter.getSystem() == null || submitter.getValue() == null) {
       throw new ca.uhn.fhir.rest.server.exceptions.InvalidRequestException(
-          "Missing required parameter: submitter"
-      );
+          "Missing required parameter: submitter");
     }
 
-    final SubmitterIdentifier submitterIdentifier = new SubmitterIdentifier(
-        submitter.getSystem(),
-        submitter.getValue()
-    );
+    final SubmitterIdentifier submitterIdentifier =
+        new SubmitterIdentifier(submitter.getSystem(), submitter.getValue());
 
     // Look up the submission.
     final Submission submission = getSubmission(submitterIdentifier, submissionId.getValue());
@@ -154,7 +145,7 @@ public class BulkSubmitStatusProvider {
         }
       }
       // All jobs are done, use the first job ID.
-      return redirectToJob(jobIds.get(0), requestDetails);
+      return redirectToJob(jobIds.getFirst(), requestDetails);
     }
 
     // If no job IDs yet (executor hasn't started), wait briefly for one to be created.
@@ -164,22 +155,20 @@ public class BulkSubmitStatusProvider {
     }
 
     // If we still don't have a job ID, return 202 with Retry-After.
-    log.warn("No job ID available for submission {}, returning 202 with Retry-After",
+    log.warn(
+        "No job ID available for submission {}, returning 202 with Retry-After",
         submissionId.getValue());
     final HttpServletResponse response = requestDetails.getServletResponse();
     response.setHeader("Retry-After", "5");
     throw new ProcessingNotCompletedException(
-        "Submission processing has not yet started",
-        buildRetryOutcome()
-    );
+        "Submission processing has not yet started", buildRetryOutcome());
   }
 
   @Nonnull
-  private Binary handleCompletedSubmission(
+  private Parameters handleCompletedSubmission(
       @Nonnull final Submission submission,
       @Nonnull final String requestUrl,
-      @Nonnull final String fhirServerBase
-  ) {
+      @Nonnull final String fhirServerBase) {
     // Per the Argonaut spec, even submissions with some failed manifests should return a status
     // manifest with both output and error arrays populated. Only throw an exception for aborted
     // submissions.
@@ -192,10 +181,8 @@ public class BulkSubmitStatusProvider {
   }
 
   @Nonnull
-  private Binary redirectToJob(
-      @Nonnull final String jobId,
-      @Nonnull final ServletRequestDetails requestDetails
-  ) {
+  private Parameters redirectToJob(
+      @Nonnull final String jobId, @Nonnull final ServletRequestDetails requestDetails) {
     // Check if the job has completed.
     if (jobRegistry != null) {
       final Job<?> job = jobRegistry.get(jobId);
@@ -203,8 +190,8 @@ public class BulkSubmitStatusProvider {
         // Job is done, return the result directly.
         try {
           final IBaseResource result = job.getResult().get();
-          if (result instanceof final Binary binary) {
-            return binary;
+          if (result instanceof final Parameters parameters) {
+            return parameters;
           }
           // Unexpected result type - should not happen.
           throw new InternalErrorException("Unexpected job result type: " + result.getClass());
@@ -231,17 +218,12 @@ public class BulkSubmitStatusProvider {
     final int progress = calculateProgressForJob(jobId);
     response.setHeader("X-Progress", progress + "%");
 
-    throw new ProcessingNotCompletedException(
-        "Processing",
-        buildProcessingOutcome(jobUrl)
-    );
+    throw new ProcessingNotCompletedException("Processing", buildProcessingOutcome(jobUrl));
   }
 
   @Nullable
   private String waitForJobId(
-      @Nonnull final SubmitterIdentifier submitterIdentifier,
-      @Nonnull final String submissionId
-  ) {
+      @Nonnull final SubmitterIdentifier submitterIdentifier, @Nonnull final String submissionId) {
     // Wait briefly for a job ID to be created by BulkSubmitExecutor.
     for (int i = 0; i < MAX_JOB_WAIT_ATTEMPTS; i++) {
       try {
@@ -251,19 +233,20 @@ public class BulkSubmitStatusProvider {
         return null;
       }
 
-      final Submission submission = submissionRegistry.get(submitterIdentifier, submissionId)
-          .orElse(null);
+      final Submission submission =
+          submissionRegistry.get(submitterIdentifier, submissionId).orElse(null);
       if (submission != null) {
         final List<String> jobIds = submission.getAllJobIds();
         if (!jobIds.isEmpty()) {
-          return jobIds.get(0);
+          return jobIds.getFirst();
         }
       }
 
       // If submission completed while we were waiting, stop waiting.
-      if (submission != null && (submission.state() == SubmissionState.COMPLETED
-          || submission.state() == SubmissionState.COMPLETED_WITH_ERRORS
-          || submission.state() == SubmissionState.ABORTED)) {
+      if (submission != null
+          && (submission.state() == SubmissionState.COMPLETED
+              || submission.state() == SubmissionState.COMPLETED_WITH_ERRORS
+              || submission.state() == SubmissionState.ABORTED)) {
         return null;
       }
     }
@@ -272,13 +255,10 @@ public class BulkSubmitStatusProvider {
 
   @Nonnull
   private Submission getSubmission(
-      @Nonnull final SubmitterIdentifier submitterIdentifier,
-      @Nonnull final String submissionId
-  ) {
-    return submissionRegistry.get(submitterIdentifier, submissionId)
-        .orElseThrow(() -> new ResourceNotFoundException(
-            "Submission not found: " + submissionId
-        ));
+      @Nonnull final SubmitterIdentifier submitterIdentifier, @Nonnull final String submissionId) {
+    return submissionRegistry
+        .get(submitterIdentifier, submissionId)
+        .orElseThrow(() -> new ResourceNotFoundException("Submission not found: " + submissionId));
   }
 
   /**
@@ -288,9 +268,7 @@ public class BulkSubmitStatusProvider {
    * @return Progress percentage (0-100).
    */
   private int calculateProgressForJob(@Nonnull final String jobId) {
-    return submissionRegistry.getByJobId(jobId)
-        .map(this::calculateProgress)
-        .orElse(0);
+    return submissionRegistry.getByJobId(jobId).map(this::calculateProgress).orElse(0);
   }
 
   /**
@@ -305,12 +283,15 @@ public class BulkSubmitStatusProvider {
       return 0;
     }
 
-    final long completedJobs = jobs.stream()
-        .filter(job -> job.state() == ManifestJobState.DOWNLOADED
-            || job.state() == ManifestJobState.COMPLETED
-            || job.state() == ManifestJobState.FAILED
-            || job.state() == ManifestJobState.ABORTED)
-        .count();
+    final long completedJobs =
+        jobs.stream()
+            .filter(
+                job ->
+                    job.state() == ManifestJobState.DOWNLOADED
+                        || job.state() == ManifestJobState.COMPLETED
+                        || job.state() == ManifestJobState.FAILED
+                        || job.state() == ManifestJobState.ABORTED)
+            .count();
 
     return (int) ((completedJobs * 100) / jobs.size());
   }
@@ -318,22 +299,26 @@ public class BulkSubmitStatusProvider {
   @Nonnull
   private static OperationOutcome buildProcessingOutcome(@Nonnull final String jobUrl) {
     final OperationOutcome outcome = new OperationOutcome();
-    outcome.addIssue()
+    outcome
+        .addIssue()
         .setCode(IssueType.INFORMATIONAL)
         .setSeverity(IssueSeverity.INFORMATION)
-        .setDiagnostics("Job accepted for processing, see the Content-Location header for the "
-            + "URL at which status can be queried: " + jobUrl);
+        .setDiagnostics(
+            "Job accepted for processing, see the Content-Location header for the "
+                + "URL at which status can be queried: "
+                + jobUrl);
     return outcome;
   }
 
   @Nonnull
   private static OperationOutcome buildRetryOutcome() {
     final OperationOutcome outcome = new OperationOutcome();
-    outcome.addIssue()
+    outcome
+        .addIssue()
         .setCode(IssueType.INFORMATIONAL)
         .setSeverity(IssueSeverity.INFORMATION)
-        .setDiagnostics("Submission processing has not yet started. Please retry after a few "
-            + "seconds.");
+        .setDiagnostics(
+            "Submission processing has not yet started. Please retry after a few " + "seconds.");
     return outcome;
   }
 
@@ -361,5 +346,4 @@ public class BulkSubmitStatusProvider {
     }
     return url.toString();
   }
-
 }
